--- a/HW_Folder/index.html
+++ b/HW_Folder/index.html
@@ -8,13 +8,13 @@
     <h1>Janessa Melendez</h1>
     <h2>CIM 111 Homeworks</h2>
     <ol>
-      <li<a href="assignment_1">Assignment_1</a></li>
-      <li<a href="Assignment_2">Assignment_2</a></li>
-      <li<a href="Assignment_3">Assignment_3</a></li>
-      <li<a href="Assignment_4">Assignment_4</a></li>
-      <li<a href="Assignment_5">Assignment_5</a></li>
-      <li<a href="Assignment_6">Assignment_6</a></li>
-      <li<a href="Assignment_7">Assignment_7</a></li>
+      <li><a href="assignment_1">Assignment_1</a></li>
+      <li><a href="Assignment_2">Assignment_2</a></li>
+      <li><a href="Assignment_3">Assignment_3</a></li>
+      <li><a href="Assignment_4">Assignment_4</a></li>
+      <li><a href="Assignment_5">Assignment_5</a></li>
+      <li><a href="Assignment_6">Assignment_6</a></li>
+      <li><a href="Assignment_7">Assignment_7</a></li>
       </ol>
   </body>
 </html>
