--- a/HW_Folder/Assignment_2/Resume/JMM_Resume.html
+++ b/HW_Folder/Assignment_2/Resume/JMM_Resume.html
@@ -107,7 +107,7 @@
           <li> <a href="http://atalamontessori.org/">Atala Montessori</a> </li>
           <li> <a href="http://kingswoodmontessori.com/">Kingswood Montessori</a> </li>
         </ul>
-      <center> <h2> Print Resume</h2> <a href="images-2/Janessa M Cover letter & Resume 2018">PDF File</a> </center>
+      <center> <h2> Print Resume</h2> <a href="images-2/Janessa M Cover letter & Resume 2018.pdf">PDF File </a> </center>
 
   </body>
 
