--- a/HW_Folder/Assignment_3/CSS_EX/CSS_exercise.html
+++ b/HW_Folder/Assignment_3/CSS_EX/CSS_exercise.html
@@ -25,12 +25,17 @@
           background-color: yellow;
         padding: 20px;
       }
+      image:hover{
+      background-color: blue;
+      padding: 20px;
+    }
       </style>
 <body>
 <p id="firstP"> Hi this is the first paragraph. </p>
 <p class="normalp">
 <p> <a href="http://www.google.com"> Go to Google </a> </p>
 <p> Hi this is the second paragraph. </p>
+  <image width="90%" src= "CSS_EX/painting.jpg" />
 <p> Hi this is the third paragraph. </p>
 </body>
 
