--- a/HW_Folder/Assignment_3/CSS_Resume/JMM_Resume-2.html
+++ b/HW_Folder/Assignment_3/CSS_Resume/JMM_Resume-2.html
@@ -78,7 +78,7 @@ ul li {
       <h1 class= "experience" id="headings">
           Janessa Maria Melendez
       </h1>
-        <image width="200" src="images-2/janessa-p.jpg" />
+        <img width="200" src="images-2/janessa-p.jpg" />
         <!-- This is where the big table starts -->
   <table border="5" width="90%">
       <tr>
